﻿2007-03-18  Rogier Polak     <rogier.l.a.polak@gmail.com>

	* src/main.cpp: Added (-v) version to the arguments. (Applied a patch
	by Patrick Matthäi).
	* src/resources/image.cpp: Deleted the "pink code", which added
	transparancy with SDL_SetColorKey.

2007-03-18  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* icons/tmw.ico, icons/tmw.png, icons/tmw.xpm: Replaced icons with the
	green globe that is also used on the website.

2007-03-14  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/main.cpp, src/tmw.rc, data/icons/tmw-icon.png,
	data/icons/tmw-icon.xpm, data/icons/tmw.ico, data/icons/tmw-icon.ico,
	data/icons/Makefile.am, data/icons/tmw.png, data/icons/tmw.xpm,
	data/icons/CMakeLists.txt: Renamed icons to make things easier for
	Debian packaging, and the "-icon" part was superfluous anyway.

2007-03-12  Philipp Sehmisch  <tmw@crushnet.org>

	* src/simpleanimation.cpp, src/simpleanimation.h, src/CmakeLists.txt,
	src/Makefile.am: Added a simple animation class that hosts a looping
	animation without the action and direction stuff from AnimatedSprite.

2007-03-12  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/items/armor-head-rangerhat.png: New version of ranger
	hat icon by Pauan.

2007-03-11  Philipp Sehmisch  <tmw@crushnet.org>

	* src/map.cpp, src/gui/viewport.cpp: Fixed a bug that made the engine
	not draw the last row and column of the map.

2007-03-09  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/gui/target-cursor-blue.png,
	data/graphics/gui/target-cursor-red.png: Added targeting cursors by
	Pauan.
	* data/graphics/sprites/chest-cotton-male.png,
	data/graphics/sprites/chest-cotton-female.png: Replaced cotton shirt
	with improved version by Pauan.

2007-02-27  Philipp Sehmisch  <tmw@crushnet.org>

	* gui/button.cpp, src/guibutton.h,
	src/gui/tabbedcontainer.cpp, src/gui/tabbedcontainer.h:: Tabbed
	containers now display the button of the active tab pressed all
	the time.

2007-02-26  Bjørn Lindeijer  <bjorn@lindeijer.nl>
