@@ -1,3 +1,5 @@
+man6_MANS = tmw.6
+
 EXTRA_DIST = packages.txt \
 	     FAQ.txt \
 	     HACKING.txt \
