@@ -1,0 +1,74 @@
+.TH "TMW" "6"
+.SH "NAME"
+tmw \- tmw is The Mana World: A fantasy online game
+.SH "SYNOPSIS"
+\fBtmw\fR
+.SH "DESCRIPTION"
+This manual page documents briefly the
+\fBtmw\fR ingame
+commands.
+\fBtmw\fR is a great online game based upon the Seiken Densetsu Serie.
+It has its own universe, and and its own character management system, which will
+give you the opportunity to play in a 2D heroic-fantasy world forever.
+.SH "BINARY PARAMETERS"
+This program follows the usual GNU command line syntax, with long
+options starting with two dashes (`-').
+A summary of options is included below.
+.TP
+.B \-h, \-\-help
+Show summary of options.
+.TP
+.B \-v, \-\-version
+Show version of the program.
+.TP
+.B \-u, \-\-skipupdate
+Skip the update process.
+.TP
+.B \-U, \-\-username
+Login with this username.
+.TP
+.B \-P, \-\-password
+Login with this password.
+.TP
+.B \-D, \-\-default
+Bypass the login process with default settings.
+.TP
+.B \-p, \-\-playername
+Login with this player.
+.TP
+.B \-C, \-\-configfile
+Configuration file to use
+.SH "COMMON KEYS"
+.TP
+.B Arrow Keys:
+Move your character around.
+.TP
+.B Left Ctrl:
+Make your character attack.
+.TP
+.B Key A:
+Target nearest monster.
+.TP
+.B Key G:
+Get items on the ground or in a chest.
+.TP
+.B Alt + 1...9:
+Shows an emoticon above your character.
+.TP
+.B Alt + I:
+Shows / Hide inventory window.
+.TP
+.B Alt + K:
+Shows / Hide skills window.
+.TP
+.B Alt + E:
+Shows / Hide equipment window.
+.TP
+.B Alt + C:
+Shows configuration window.
+.SH "AUTHOR"
+This manual page was written by Patrick Matth\[:a]i <patrick.matthaei@web.de>
+for The Mana World project.
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU General Public License, Version 2 any
+later version published by the Free Software Foundation.
